--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "@types/react": "^16.14.2",
     "@types/react-dom": "^16.9.10",
     "apexcharts": "^3.22.2",
+    "history": "^4.10.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.7",
     "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -40,5 +47,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/history": "^4.7.8",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router": "^5.1.8",
+    "@types/react-router-dom": "^5.1.6"
   }
 }
